feat: agent-driven dev container lifecycle via MCP tools
Add create/stop/start/delete container management through the master
thread's MCP tools, replacing the need for a dashboard wizard. The agent
walks developers through onboarding conversationally, collecting SSH key,
name, and email before provisioning.

Key changes:
- New entrypoint script with env-var provisioning (no exec endpoint)
- Branded types (SSHPublicKey, DevName, DevEmail) for input validation
- 4 Docker proxy rules (create, start, stop, delete)
- SSH ports bound to 127.0.0.1, FIDO2 key support
- Label-verified delete, two-phase error handling
- Onboarding conversation guide in master system prompt
- Compound knowledge doc for architecture decisions

--- a/Dockerfile.dev-container
+++ b/Dockerfile.dev-container
@@ -70,9 +70,13 @@ RUN mv /usr/bin/gh /usr/bin/gh-real \
 # tmux configuration (system-wide)
 COPY docker/tmux.conf /etc/tmux.conf
 
+# Entrypoint script for provisioning + sshd
+COPY docker/dev-entrypoint.sh /usr/local/bin/dev-entrypoint.sh
+RUN chmod +x /usr/local/bin/dev-entrypoint.sh
+
 # CRITICAL: Docker ENV vars are NOT inherited by SSH sessions.
-# broker-env.sh is written at container start time in CMD (not build time)
-# so that runtime env vars CREDENTIAL_BROKER_URL and BROKER_SECRET are captured.
+# For MCP-created containers, broker-env.sh is bind-mounted from /secrets/.
+# For CLI-created containers, the entrypoint writes it from env vars (fallback).
 
 # Auto-attach tmux on SSH login (in profile.d, not .bashrc — only runs for login shells)
 RUN echo '#!/bin/bash' > /etc/profile.d/tmux-auto.sh \
@@ -83,4 +87,4 @@ RUN echo '#!/bin/bash' > /etc/profile.d/tmux-auto.sh \
 
 # Generate host keys on first start + start sshd
 EXPOSE 22
-CMD ["bash", "-c", "printf 'export CREDENTIAL_BROKER_URL=%s\\nexport BROKER_SECRET=%s\\n' \"$CREDENTIAL_BROKER_URL\" \"$BROKER_SECRET\" > /etc/profile.d/broker-env.sh && ssh-keygen -A && exec /usr/sbin/sshd -D -e"]
+ENTRYPOINT ["/usr/local/bin/dev-entrypoint.sh"]
