fix: bind dev container SSH to 0.0.0.0 and rename DASHBOARD_HOST to PUBLIC_HOST
Dev container SSH ports were bound to 127.0.0.1, making them unreachable
from external devs. Also renames the misleading DASHBOARD_HOST env var to
PUBLIC_HOST since it's the server's public hostname for SSH configs, not
the dashboard URL (which goes through Cloudflare tunnel).

--- a/.env.example
+++ b/.env.example
@@ -10,5 +10,9 @@ WORKSPACE_ROOT=/path/to/your/workspace
 # Optional: path to Claude CLI credentials file (defaults to ~/.claude/.credentials.json)
 # CLAUDE_CREDENTIALS=/path/to/.claude/.credentials.json
 
-# Optional: Cloudflare Tunnel token for HTTPS access
+# Public hostname or IP of this server — used in SSH config snippets for dev containers
+# (NOT the Cloudflare tunnel URL — this is what devs SSH to directly)
+PUBLIC_HOST=
+
+# Optional: Cloudflare Tunnel token for HTTPS dashboard access
 # TUNNEL_TOKEN=
