fix: pass COMPOSE_PROJECT env var to dashboard service
Infrastructure containers were invisible on the memory dashboard because
the dashboard had no COMPOSE_PROJECT to query Docker labels with.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -95,6 +95,7 @@ services:
       - "127.0.0.1:3100:3100"
     environment:
       - DOCKER_PROXY_URL=http://docker-proxy:2375/v1.47
+      - COMPOSE_PROJECT=${COMPOSE_PROJECT_NAME:-tinyclaw}
     networks:
       - internal
     healthcheck:
