--- a/docker/tmux.conf
+++ b/docker/tmux.conf
@@ -8,7 +8,7 @@ setw -g aggressive-resize on
 # Full mouse support (tmux 3.4 on Ubuntu 24.04)
 set -g mouse on
 
-# Right-click context menu (simplified for non-tmux users)
+# Right-click / Shift+right-click context menu (simplified for non-tmux users)
 unbind -n MouseDown3Pane
 bind -n MouseDown3Pane {
     if -Ft= "#{mouse_any_flag}" {
@@ -20,8 +20,20 @@ bind -n MouseDown3Pane {
             "Split Below"      v  "split-window -v -c '#{pane_current_path}'" \
             ""                                                                 \
             "Full Screen"      z  "resize-pane -Z"                             \
+            ""                                                                 \
+            "Detach"           d  "detach-client"                              \
             "Close Pane"       x  "kill-pane"
     }
+}
+bind -n S-MouseDown3Pane {
+    display-menu -T "#[align=centre] Actions " -t= -xM -yM \
+        "Split Right"      h  "split-window -h -c '#{pane_current_path}'" \
+        "Split Below"      v  "split-window -v -c '#{pane_current_path}'" \
+        ""                                                                 \
+        "Full Screen"      z  "resize-pane -Z"                             \
+        ""                                                                 \
+        "Detach"           d  "detach-client"                              \
+        "Close Pane"       x  "kill-pane"
 }
 
 # Sane defaults
