--- a/docker/tmux.conf
+++ b/docker/tmux.conf
@@ -1,4 +1,4 @@
-# TinyClaw dev container tmux configuration
+# Borg dev container tmux configuration
 # System-wide: /etc/tmux.conf
 
 # Fix display on reattach (resize to new client, then refresh)
