--- a/.gitignore
+++ b/.gitignore
@@ -4,16 +4,16 @@ node_modules/
 # TypeScript build output
 dist/
 
-# TinyClaw runtime files
-.tinyclaw/logs/
-.tinyclaw/queue/
-.tinyclaw/threads.json
-.tinyclaw/message-history.jsonl
-.tinyclaw/message-history.1.jsonl
-.tinyclaw/message-models.json
-.tinyclaw/routing-log.jsonl
-.tinyclaw/settings.json
-.tinyclaw/heartbeat-state.json
+# Borg runtime files
+.borg/logs/
+.borg/queue/
+.borg/threads.json
+.borg/message-history.jsonl
+.borg/message-history.1.jsonl
+.borg/message-models.json
+.borg/routing-log.jsonl
+.borg/settings.json
+.borg/heartbeat-state.json
 *.log
 
 # Docker / Secrets
